gccida/g0/rtx_equal_for_field_assignment_p
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rtx_equal_for_field_assignment_p/src/combine.c:8011:33: error: use of undeclared identifier 'machine_mode'
v3 = gen_lowpart_for_combine( ( machine_mode)*( unsigned __int8 *)( y->fld[0].rtwint + 2), x); 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rtx_equal_for_field_assignment_p/src/combine.c:8017:33: error: use of undeclared identifier 'machine_mode'
v4 = gen_lowpart_for_combine( ( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2), y); 
                                ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/rtx_equal_for_field_assignment_p/src/obj/combine.o] Error 1
